--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,17 @@
 
 @font-face {
   font-family: 'Rubik';
-  src: url('/Rubik.ttf');
+  src: url('/fonts/rubik.ttf');
+}
+
+@font-face {
+  font-family: 'Boxyrnd';
+  src: url('/fonts/boxyrnd.ttf');
+}
+
+@font-face {
+  font-family: 'Asphalt-С';
+  src: url('/fonts/asphalt-c.ttf');
 }
 
 img {
@@ -14,5 +24,5 @@ img {
 }
 
 body {
-  font-family: Rubik;
+  font-family: Asphalt-С;
 }
